# xp-my-redis

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
examples/: actor.rs  actor_impl_expanded.rs  block_main_1.rs  channel-drop-test-print.rs  channel-drop-test.rs  future.rs  hello-redis.rs  select.rs  streams.rs
src/: connection.rs  lib.rs  main.rs
