[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
console-subscriber = "0.1.5"
tokio = { version = "1", features = ["full", "tracing"] }
mini-redis = "0.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
